syntax = "proto3";

package types;

import "constraint.proto";

option go_package = "github.com/vultisig/recipes/types";

message ParameterConstraint {
  string parameter_name = 1;
  Constraint constraint = 2;
}
