syntax = "proto3";

package types;

option go_package = "github.com/vultisig/recipes/types";

// ResourcePath represents a parsed resource path
message ResourcePath {
  // ChainID is the blockchain identifier
  string chain_id = 1;

  // ProtocolID is the protocol identifier
  string protocol_id = 2;

  // FunctionID is the function identifier
  string function_id = 3;

  // Full is the complete resource path
  string full = 4;
}
